Fixed too wide article link

--- a/web/static/web/css/index.css
+++ b/web/static/web/css/index.css
@@ -35,7 +35,7 @@
     cursor: pointer;
 }
 
-.article-text h2, .events .header a {
+.article-text h2 a, .events .header a {
     color: rgb(248, 200, 17);
     text-transform: uppercase;
     font-size: 32px;
